# qcd_ml

./: .gitignore  1h1l_ptc.py  Multigrid.ipynb  README.rst  coarse_model.ipynb  coarse_model.py  meson.build  multigrid.ipynb  multigrid_model.ipynb  multigrid_model.py  multigrid_setup.ipynb  multigrid_setup.py  ptc1h1l.ipynb  ptc_1h1l_ID_start.ipynb  pyproject.toml  pytest.ini  smoother.ipynb  smoother.py  stuff.py  tox.ini  train_pooling.sh  try_pooling.py  try_pooling_2000.py  try_pooling_without_paths.ipynb
.github/workflows/: github-pages.yml  python-package.yml
docs/source/: conf.py  contributing.rst  doc-datatypes.rst  howto-test.rst  index.rst  install.rst  source-base.rst  source-compat.rst  source-doc.rst  source-nn.rst  source-qcd.rst  source-util.rst
src/qcd_ml/: __init__.py  dirac.py  hop.py  meson.build  operations.py  paths.py  static.py
src/qcd_ml/base/: __init__.py  hop.py  operations.py  paths.py
src/qcd_ml/base/paths/: __init__.py  compile.py  path_buffer.py  simple_paths.py
src/qcd_ml/compat/: __init__.py  gpt.py
src/qcd_ml/nn/: __init__.py  dense.py  lptc.py  pt.py  ptc.py
src/qcd_ml/nn/matrix_layers/: __init__.py  activation.py  bilinear.py  convolution.py  exponentiation.py  loop_generator.py
src/qcd_ml/nn/pt_pool/: __init__.py  get_paths.py  pool.py  pool4d.py
src/qcd_ml/qcd/: __init__.py  dirac.py  static.py
src/qcd_ml/qcd/dirac/: __init__.py  coarsened.py
src/qcd_ml/qcd/gauge/: __init__.py  observables.py  smear.py
src/qcd_ml/util/: __init__.py  comptime.py  solver.py  tensor.py
src/qcd_ml/util/qcd/: __init__.py  multigrid.py
test/: conftest.py  test_01_operations_hop.py  test_02_dirac.py  test_03_path_evaluate.py  test_04_ptc.py  test_05_compat_gpt.py  test_06_against_gpt.py  test_07_util_qcd_multigrid.py  test_08_path_buffer.py  test_08_path_buffer_against_evaluate.py  test_09_nn_pt_pool.py  test_10_pt_pool_get_paths.py  test_11_qcd_gauge.py  test_12_util_tensor.py  test_13_matrix_layers.py  test_14_pt.py  test_bench_01_v_ng_evaluate_path.py  test_bench_02_path_buffer.py  test_bench_03_operations.py  test_bench_04_dirac.py  test_bench_05_ptc.py  test_bench_06_pool.py  test_bench_07_matrix_layers.py
test/assets/: V_1500mu0_1500mu2.npy  generate_test_data.py  psi_1500mu0_psitest.npy  psi_Dw1500_m0p5_psitest.npy  psi_Dwc1500_m0p5_psitest.npy  psi_test.npy
test/extra_tests/: test_01_extra_against_gpt.py
