python.install_sources(
  '__init__.py', 'operations.py', 'hop.py', 'static.py', 'dirac.py', 'paths.py',
  pure: true,
  subdir: 'qcd_ml'
)

python.install_sources(
  'nn/__init__.py', 'nn/ptc.py', 'nn/lptc.py',
  pure: true,
  subdir: 'qcd_ml/nn'
)

python.install_sources(
  'compat/__init__.py', 'compat/gpt.py',
  pure: true,
  subdir: 'qcd_ml/compat'
)

python.install_sources(
  'util/__init__.py', 'util/solver.py',
  pure: true,
  subdir: 'qcd_ml/util'
)

python.install_sources(
  'util/qcd/__init__.py', 'util/qcd/multigrid.py',
  pure: true,
  subdir: 'qcd_ml/util/qcd'
)
