python.install_sources(
  '__init__.py',
  pure: true,
  subdir: 'qcd_ml'
)

python.install_sources(
  'base/__init__.py', 'base/operations.py', 'base/hop.py',
  pure: true,
  subdir: 'qcd_ml/base'
)
python.install_sources(
  'base/paths/__init__.py', 'base/paths/simple_paths.py', 'base/paths/path_buffer.py', 'base/paths/compile.py',
  pure: true,
  subdir: 'qcd_ml/base/paths'
)

python.install_sources(
  'qcd/__init__.py', 'qcd/static.py',
  pure: true,
  subdir: 'qcd_ml/qcd'
)
python.install_sources(
  'qcd/dirac/__init__.py', 'qcd/dirac/coarsened.py',
  pure: true,
  subdir: 'qcd_ml/qcd/dirac'
)

python.install_sources(
  'qcd/gauge/__init__.py', 'qcd/gauge/smear.py', 'qcd/gauge/observables.py',
  pure: true,
  subdir: 'qcd_ml/qcd/gauge'
)

python.install_sources(
  'nn/__init__.py', 'nn/ptc.py', 'nn/lptc.py', 'nn/pt.py', 'nn/dense.py',
  pure: true,
  subdir: 'qcd_ml/nn'
)

python.install_sources(
  'nn/pt_pool/__init__.py', 'nn/pt_pool/pool.py', 'nn/pt_pool/pool4d.py', 'nn/pt_pool/get_paths.py',
  pure: true,
  subdir: 'qcd_ml/nn/pt_pool'
)

python.install_sources(
  'compat/__init__.py', 'compat/gpt.py',
  pure: true,
  subdir: 'qcd_ml/compat'
)

python.install_sources(
  'util/__init__.py', 'util/solver.py', 'util/comptime.py', 'util/tensor.py',
  pure: true,
  subdir: 'qcd_ml/util'
)

python.install_sources(
  'util/qcd/__init__.py', 'util/qcd/multigrid.py',
  pure: true,
  subdir: 'qcd_ml/util/qcd'
)
